--- a/.drone.yml
+++ b/.drone.yml
@@ -20,13 +20,17 @@ kind: pipeline
 name: build-test-publish
 
 steps:
+- name: install-dependencies
+  commands:
+  - npm install
+  image: "casperlabs/buildenv:latest"
+
 - name: run-build
   commands:
-  - npm install react-scripts
-  - npm install react-router-dom
-  - npm install tweetnacl-ts
   - npm run build
   image: "casperlabs/buildenv:latest"
+  depends_on:
+  - install-dependencies
 
 trigger:
   branch:
