ECO-435: set author information and replace usage of nacl.decodeHex with Buffer.from(str, 'hex').
Webpack has a default pitfall for Buffer, so that we can use it in browser.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "version": "0.0.1",
   "name": "CasperLabs Signer",
+  "author": "https://casperlabs.io",
   "icons": {
     "48": "logo192.png"
   },
