--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.23",
+    "@types/react-confirm": "^0.1.4",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -23,6 +24,7 @@
     "pump": "^3.0.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-confirm": "^0.1.20",
     "react-dom": "^16.13.0",
     "minimist": "^1.2.5",
     "react-router-dom": "latest",
