--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,12 @@
   "version": "0.2.0",
   "name": "CasperLabs Signer",
   "author": "https://casperlabs.io",
+  "description": "CasperLabs Signer tool for signing transactions on the blockchain.",
   "icons": {
-    "48": "logo192.png"
+    "16": "logo16.png",
+    "64": "logo64.png",
+    "128": "logo128.png",
+    "192": "logo192.png"
   },
   "background": {
     "scripts": [
