--- a/.drone.yml
+++ b/.drone.yml
@@ -17,35 +17,6 @@ clone:
     image: "casperlabs/buildenv:latest"
 
 kind: pipeline
-name: build-test-publish-op-1357
-
-steps:
-- name: install-dependencies
-  commands:
-  - npm install
-  image: "casperlabs/buildenv:latest"
-
-- name: run-build
-  commands:
-  - npm run build
-  image: "casperlabs/buildenv:latest"
-  depends_on:
-  - install-dependencies
-
-- name: run-test
-  commands:
-  - npm run test_ci
-  image: "casperlabs/buildenv:latest"
-  depends_on:
-  - run-build
-
-trigger:
-  branch:
-  - OP_1357
-  - trying
-  - staging
-
-kind: pipeline
 name: build-test-publish
 
 steps:
@@ -67,6 +38,39 @@ steps:
   image: "casperlabs/buildenv:latest"
   depends_on:
   - run-build
+
+- name: run-complete
+  commands:
+  - npm run complete
+  image: "casperlabs/buildenv:latest"
+  depends_on:
+  - run-test
+  when:
+    event:
+    - push
+    branch:
+    - master
+
+- name: upload-extension
+  image: "casperlabs/buildenv:latest"
+  commands:
+  - "./publish.sh"
+  environment:
+    APPLICATION_ID:
+      from_secret: plugin_application
+    CLIENT_ID:
+      from_secret: plugin_client_id
+    CLIENT_SECRET:
+      from_secret: plugin_client_secret
+    REFRESH_TOKEN:
+      from_secret: plugin_refresh_token
+  depends_on:
+  - run-complete
+  when:
+    event:
+    - push
+    branch:
+    - master
 
 trigger:
   branch:
