--- a/.drone.yml
+++ b/.drone.yml
@@ -41,9 +41,9 @@ steps:
 
 trigger:
   branch:
-  - OP-1357
-  - trying
-  - staging
+    - OP-1357
+  event:
+    - push
 
 kind: pipeline
 name: build-test-publish
