--- a/.drone.yml
+++ b/.drone.yml
@@ -41,11 +41,11 @@ steps:
 
 - name: upload-extension
   image: "casperlabs/buildenv:latest"
-  command:
-    - ls -alR /drone
-    - ZIP_FILE=$(ls /drone/artifacts/*zip)
-    - ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
-    - curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "x-goog-api-version: 2" -X PUT -T $ZIP_FILE -v "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${APPLICATION_ID}"
+  commands:
+  - ls -alR /drone
+  - ZIP_FILE=$(ls /drone/artifacts/*zip)
+  - ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
+  - curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "x-goog-api-version: 2" -X PUT -T $ZIP_FILE -v "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${APPLICATION_ID}"
   environment:
     APPLICATION_ID:
       from_secret: plugin_application
