--- a/.drone.yml
+++ b/.drone.yml
@@ -41,7 +41,7 @@ steps:
 
 - name: upload-extension
   image: "casperlabs/buildenv:latest"
-  script:
+  script: |
     ls -alR /drone
     ZIP_FILE=$(ls /drone/artifacts/*zip)
     ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
@@ -89,7 +89,7 @@ steps:
 
 - name: upload-extension
   image: "casperlabs/buildenv:latest"
-  script:
+  script: |
     ls -alR /drone
     ZIP_FILE=$(ls /drone/artifacts/*zip)
     ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
