ECO-484: change the background color of badge text to `red`, and send notification when receiving  a signature request.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,9 +24,10 @@
       "all_frames": true
     }
   ],
-  "permissions": [],
+  "permissions": ["notifications"],
   "web_accessible_resources": [
-    "scripts/content/inpage.js"
+    "scripts/content/inpage.js",
+    "logo64.png"
   ],
   "browser_action": {
     "default_popup": "index.html",
