--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casperlabs-signer",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "browser-passworder": "^2.0.3",
+    "file-saver": "^2.0.2",
     "formik": "^2.1.4",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
@@ -82,6 +83,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.3.33",
     "@types/node": "^13.7.7",
     "@types/react-router-dom": "^5.1.3",
