--- a/.drone.yml
+++ b/.drone.yml
@@ -55,26 +55,26 @@ steps:
 - name: upload-extension
   image: "casperlabs/buildenv:latest"
   commands:
-  - ZIP_FILE=$(ls /drone/src/artifacts/*zip)
-  - echo $ZIP_FILE
-#  script: |
-#    ls -al
-#    echo "TEST"
-#    ls -alR /drone
-#    ZIP_FILE=$(ls /drone/artifacts/*zip)
-#    ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
-#    curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "x-goog-api-version: 2" -X PUT -T $ZIP_FILE -v "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${APPLICATION_ID}"
-#  environment:
-#    APPLICATION_ID:
-#      from_secret: plugin_application
-#    CLIENT_ID:
-#      from_secret: plugin_client_id
-#    CLIENT_SECRET:
-#      from_secret: plugin_client_secret
-#    REFRESH_TOKEN:
-#      from_secret: plugin_refresh_token
+  - "ZIP_FILE=$(ls /drone/src/artifacts/*zip)"
+  - 'ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&refresh_token=${REFRESH_TOKEN}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)'
+  - 'curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "x-goog-api-version: 2" -X PUT -T $ZIP_FILE -v "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${APPLICATION_ID}"'
+  environment:
+    APPLICATION_ID:
+      from_secret: plugin_application
+    CLIENT_ID:
+      from_secret: plugin_client_id
+    CLIENT_SECRET:
+      from_secret: plugin_client_secret
+    REFRESH_TOKEN:
+      from_secret: plugin_refresh_token
   depends_on:
   - run-complete
+# uncomment before merging
+#  when:
+#    event:
+#    - push
+#    branch:
+#    - master
 
 trigger:
   branch:
