--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "name": "CasperLabs Signer",
   "author": "https://casperlabs.io",
   "description": "CasperLabs Signer tool for signing transactions on the blockchain.",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "icons": {
     "16": "logo16.png",
     "64": "logo64.png",
