--- a/.drone.yml
+++ b/.drone.yml
@@ -45,12 +45,11 @@ steps:
   image: "casperlabs/buildenv:latest"
   depends_on:
   - run-test
-# uncomment before merging
-#  when:
-#    event:
-#    - push
-#    branch:
-#    - master
+  when:
+    event:
+    - push
+    branch:
+    - master
 
 - name: upload-extension
   image: "casperlabs/buildenv:latest"
@@ -67,12 +66,11 @@ steps:
       from_secret: plugin_refresh_token
   depends_on:
   - run-complete
-# uncomment before merging
-#  when:
-#    event:
-#    - push
-#    branch:
-#    - master
+  when:
+    event:
+    - push
+    branch:
+    - master
 
 trigger:
   branch:
