--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -15,6 +17,7 @@
     "bootstrap": "^4.4.1",
     "browser-passworder": "^2.0.3",
     "file-saver": "^2.0.2",
+    "fontsource-roboto": "^2.2.3",
     "formik": "^2.1.4",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
@@ -109,7 +112,7 @@
     "sesify": "^4.2.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
-    "web-ext": "^4.2.0",
+    "web-ext": "^4.3.0",
     "webextension-polyfill-ts": "^0.12.0",
     "webpack-cli": "^3.3.11"
   }
