--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,7 +15,6 @@
     "@types/react-confirm": "^0.1.4",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
     "browser-passworder": "^2.0.3",
     "file-saver": "^2.0.2",
     "fontsource-roboto": "^2.2.3",
@@ -22,12 +22,12 @@
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
     "lint-staged": "^10.1.3",
+    "material-ui-popup-state": "^1.6.1",
     "minimist": "^1.2.5",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "obj-multiplex": "^1.0.0",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
     "react-confirm": "^0.1.20",
     "react-dom": "^16.13.0",
     "react-router-dom": "latest",
