[ECO-708] Allows Signer to work on any website

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.casperlabs.io/*", "*://localhost/*"],
+      "matches": ["file://*/*", "http://*/*", "https://*/*"],
       "js": ["./scripts/content/content.js"],
       "run_at": "document_start",
       "all_frames": true
