[ECO-783] Makes test methods available to window

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,6 +28,7 @@
   "permissions": ["notifications"],
   "web_accessible_resources": [
     "scripts/content/inpage.js",
+    "scripts/content/signerTestMethods.js",
     "logo64.png"
   ],
   "browser_action": {
