--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casperlabs-signer",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -14,9 +14,9 @@
     "@types/react": "^16.9.23",
     "@types/react-confirm": "^0.1.4",
     "@types/react-dom": "^16.9.5",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "browser-passworder": "^2.0.3",
-    "casperlabs-sdk": "^0.9.2",
+    "casper-client-sdk": "latest",
     "copy-to-clipboard": "^3.3.1",
     "file-saver": "^2.0.2",
     "fontsource-roboto": "^2.2.3",
@@ -26,15 +26,15 @@
     "lint-staged": "^10.1.3",
     "material-ui-popup-state": "^1.6.1",
     "minimist": "^1.2.5",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
+    "mobx": "^5.11.0",
+    "mobx-react": "^6.1.1",
     "obj-multiplex": "^1.0.0",
-    "react": "^16.13.0",
+    "react": "latest",
     "react-beautiful-dnd": "^13.0.0",
     "react-confirm": "^0.1.20",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "latest",
-    "react-scripts": "3.4.1",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.0",
+    "react-scripts": "3.4.4",
     "store": "^2.0.12",
     "tweetnacl": "^1.0.3",
     "tweetnacl-ts": "latest",
@@ -83,10 +83,7 @@
     "trailingComma": "none"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
@@ -113,7 +110,6 @@
     "husky": "^3.1.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.4",
-    "sesify": "^4.2.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "web-ext": "^4.3.0",
