test with audit failing pipeline

--- a/.github/workflows/ci-casper-signer.yml
+++ b/.github/workflows/ci-casper-signer.yml
@@ -31,6 +31,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    #- run: npm audit --audit-level=low
+    - run: npm audit --audit-level=low
     - run: npm run build
     - run: npm run test_ci
