--- a/.github/workflows/publish-casper-signer.yml
+++ b/.github/workflows/publish-casper-signer.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm audit --audit-level=low
     - run: npm run complete
     - name: Publish Extension
       uses: trmcnvn/chrome-addon@v2
