--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browser-passworder": "^2.0.3",
     "casper-client-sdk": "^1.0.33",
     "copy-to-clipboard": "^3.3.1",
+    "eslint-config-react-app": "^6.0.0",
     "file-saver": "^2.0.2",
     "fontsource-roboto": "^2.2.3",
     "formik": "^2.1.4",
@@ -100,7 +101,7 @@
     "del": "^5.1.0",
     "end-of-stream": "^1.4.4",
     "envify": "^4.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
