Removes unnecessary rm -rf

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "build": "npm run build_ui && npm run build_scripts",
     "watch": "node watch.js",
     "scripts_watch": "export INLINE_RUNTIME_CHUNK=false && webpack --watch",
-    "package": "rm -rf ./artifacts/* && web-ext build --config=webext.config.js",
+    "package": "web-ext build --config=webext.config.js",
     "complete": "npm run build && npm run package",
     "test": "react-scripts test",
     "test_ci": "react-scripts test --watchAll=false",
