--- a/.github/workflows/publish-casper-signer.yml
+++ b/.github/workflows/publish-casper-signer.yml
@@ -26,13 +26,11 @@ jobs:
     - name: Get latest Signer version number
       id: get_signer_version
       uses: battila7/get-version-action@v2
-      run: echo ${{ steps.get_signer_version.outputs.version }}
-      run: echo ${{ steps.get_signer_version.outputs.version-without-v }}
-    # - name: Publish Extension
-    #   uses: trmcnvn/chrome-addon@v2
-    #   with:
-    #     extension: 'djhndpllfiibmcdbnmaaahkhchcoijce'
-    #     zip: artifacts/casperlabs_signer-${{ steps.get_signer_version.outputs.version }}.zip
-    #     client-id: ${{ secrets.client_id }}
-    #     client-secret: ${{ secrets.client_secret }}
-    #     refresh-token: ${{ secrets.refresh_token }}
+    - name: Publish Extension
+      uses: trmcnvn/chrome-addon@v2
+      with:
+        extension: 'djhndpllfiibmcdbnmaaahkhchcoijce'
+        zip: artifacts/casperlabs_signer-${{ steps.get_signer_version.outputs.version-without-v }}.zip
+        client-id: ${{ secrets.client_id }}
+        client-secret: ${{ secrets.client_secret }}
+        refresh-token: ${{ secrets.refresh_token }}
