--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,7 +29,7 @@
       "all_frames": true
     }
   ],
-  "permissions": ["notifications", "tabs"],
+  "permissions": ["notifications"],
   "web_accessible_resources": [
     "scripts/content/inpage.js",
     "scripts/content/signerTestMethods.js",
