--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casperlabs-signer",
-  "version": "0.3.6",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -56,6 +56,7 @@
     "test": "react-scripts test --env=./custom-test-env.js",
     "test_ci": "react-scripts test --watchAll=false --env=./custom-test-env.js",
     "lint": "eslint .",
+    "lint_fix": "eslint . --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
