--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/chrome": "0.0.141",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.23",
     "@types/react-confirm": "^0.1.4",
