--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.14.3",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -10,37 +11,42 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/download": "^6.2.4",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.23",
     "@types/react-confirm": "^0.1.4",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.21.1",
     "browser-passworder": "^2.0.3",
-    "casper-client-sdk": "^1.2.0",
+    "casper-client-sdk": "../casper-client-sdk",
     "copy-to-clipboard": "^3.3.1",
+    "download": "^8.0.0",
     "eslint-config-react-app": "^6.0.0",
     "file-saver": "^2.0.2",
     "fontsource-roboto": "^2.2.3",
     "formik": "^2.1.4",
     "formstate": "^1.3.0",
     "jquery": "^3.4.1",
+    "key-encoder": "^2.0.3",
     "lint-staged": "^10.1.3",
     "material-ui-popup-state": "^1.6.1",
     "minimist": "^1.2.5",
     "mobx": "^5.11.0",
     "mobx-react": "^6.1.1",
     "obj-multiplex": "^1.0.0",
-    "react": "latest",
+    "react": "^16.8.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-confirm": "^0.1.20",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^4.0.3",
+    "safe-compare": "^1.1.4",
     "store": "^2.0.12",
     "tweetnacl": "^1.0.3",
     "tweetnacl-ts": "latest",
     "tweetnacl-util": "^0.15.1",
     "validator": "^12.2.0",
+    "webpack": "4.44.2",
     "webpack-extension-reloader": "^1.1.4",
     "yup": "^0.28.1"
   },
@@ -110,7 +116,7 @@
     "fancy-log": "latest",
     "fs-extra": "^8.1.0",
     "husky": "^3.1.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "prettier": "^2.0.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
