--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.2",
   "private": true,
   "dependencies": {
-    "@extend-chrome/storage": "^1.4.3",
     "@babel/core": "^7.14.3",
+    "@extend-chrome/storage": "^1.4.3",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@lapo/asn1js": "^1.2.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
