--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mobx": "^5.11.0",
     "mobx-react": "^6.1.1",
     "obj-multiplex": "^1.0.0",
+    "owasp-password-strength-test": "^1.3.0",
     "react": "^16.8.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-confirm": "^0.1.20",
