--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.3.33",
     "@types/node": "^13.7.7",
+    "@types/owasp-password-strength-test": "^1.3.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/store": "^2.0.2",
