--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-confirm": "^0.1.20",
     "react-dom": "^16.8.6",
+    "react-idle-timer": "^4.6.4",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^4.0.3",
     "safe-compare": "^1.1.4",
