--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,13 @@
     "react-app",
     "plugin:jsx-a11y/recommended",
     "prettier",
-    "prettier/react"
+    "prettier/react",
+    "plugin:react-hooks/recommended"
   ],
   "plugins": [
     "jsx-a11y",
-    "prettier"
+    "prettier",
+    "react-hooks"
   ],
   "rules": {
     "semi": 1,
