--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fancy-log": "latest",
     "fs-extra": "^8.1.0",
     "husky": "^3.1.0",
