Adds Netlify app url to manifest sites

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,8 @@
         "*://localhost/*",
         "*://*.make.services/*",
         "*://cspr.live/*",
-        "*://*.cspr.live/*"
+        "*://*.cspr.live/*",
+        "*://george-cl-signer-demo.netlify.app/*"
       ],
       "js": ["./scripts/content/content.js"],
       "run_at": "document_start",
