--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react-dom": "^16.9.14",
     "axios": "^0.21.1",
     "browser-passworder": "^2.0.3",
-    "casper-js-sdk": "^2.2.3",
+    "casper-js-sdk": "file:../../casper-js-sdk",
     "copy-to-clipboard": "^3.3.1",
     "download": "^8.0.0",
     "eslint-config-react-app": "^6.0.0",
@@ -50,6 +50,7 @@
     "tweetnacl": "^1.0.3",
     "tweetnacl-ts": "latest",
     "tweetnacl-util": "^0.15.1",
+    "typedjson": "^1.7.0",
     "validator": "^12.2.0",
     "webpack": "4.44.2",
     "webpack-extension-reloader": "^1.1.4",
