--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,7 +33,9 @@
         "*://casperstats.io/*",
         "*://casper-qr.vercel.app/*",
         "*://picaswap.io/wcspr/*",
-        "*://casperdash.io/*"
+        "*://casperdash.io/*",
+        "*://friendly.market/*",
+        "*://*.friendly.market/*"
       ],
       "js": [
         "./scripts/content/content.js"
