--- a/public/manifest.json
+++ b/public/manifest.json
@@ -34,10 +34,14 @@
         "*://casper-qr.vercel.app/*",
         "*://picaswap.io/wcspr/*",
         "*://casperdash.io/*",
+        "*://*.casperdash.io/*",
         "*://friendly.market/*",
         "*://*.friendly.market/*",
         "*://metacask.com/*",
-        "*://*.metacask.com/*"
+        "*://*.metacask.com/*",
+        "*://*.newland.finance/*",
+        "*://*.huobiapps/*",
+        "*://*.singlecoin.xyz/*"
       ],
       "js": [
         "./scripts/content/content.js"
