--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,7 +41,9 @@
         "*://*.metacask.com/*",
         "*://*.newland.finance/*",
         "*://*.huobiapps/*",
-        "*://*.singlecoin.xyz/*"
+        "*://*.singlecoin.xyz/*",
+        "*://*.gitcoin.co/*",
+        "*://gitcoin.co/*"
       ],
       "js": [
         "./scripts/content/content.js"
