Corrects Huobi URL

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,7 +40,7 @@
         "*://metacask.com/*",
         "*://*.metacask.com/*",
         "*://*.newland.finance/*",
-        "*://*.huobiapps/*",
+        "*://*.huobiapps.com/*",
         "*://*.singlecoin.xyz/*"
       ],
       "js": [
