Adds missing comma to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,7 +41,7 @@
         "*://*.metacask.com/*",
         "*://*.newland.finance/*",
         "*://*.huobiapps.com/*",
-        "*://*.singlecoin.xyz/*"
+        "*://*.singlecoin.xyz/*",
         "*://*.gitcoin.co/*",
         "*://gitcoin.co/*"
       ],
