--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,10 @@
         "*://*.singlecoin.xyz/*",
         "*://*.gitcoin.co/*",
         "*://gitcoin.co/*",
-        "*://*.casperpunks.io/*"
+        "*://*.casperpunks.io/*",
+        "*://*.casperpay.online/*",
+        "*://*.casperpay.live/*",
+        "*://*.casperpay.com/*"
       ],
       "js": [
         "./scripts/content/content.js"
