Add code audit URL field to the Whitelisting form
Signed-off-by: Muhammet Kara <muhammet@make.services>

--- a/.github/ISSUE_TEMPLATE/whitelisting_request.yml
+++ b/.github/ISSUE_TEMPLATE/whitelisting_request.yml
@@ -19,6 +19,10 @@ body:
       placeholder: "*://analytics.exampleproject.io/*"
     validations:
       required: true
+  - type: input
+    id: audit-url
+    attributes:
+      label: Code audit/review URL if available
   - type: textarea
     id: description
     attributes:
