Adds 'fuzhouchain' URL to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,8 @@
         "*://*.singlecoin.xyz/*",
         "*://*.gitcoin.co/*",
         "*://gitcoin.co/*",
-        "*://*.casperpunks.io/*"
+        "*://*.casperpunks.io/*",
+        "*://*.fuzhouchain.io/*"
       ],
       "js": [
         "./scripts/content/content.js"
