Add Devendran as assignee to the whitelisting requests

--- a/.github/ISSUE_TEMPLATE/whitelisting_request.yml
+++ b/.github/ISSUE_TEMPLATE/whitelisting_request.yml
@@ -4,6 +4,7 @@ title: "[Integration]: Name of Your Project"
 labels: ["Integration"]
 assignees:
   - George-cl
+  - devendran-m
 body:
   - type: input
     id: project
