--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,8 @@
         "*://*.singlecoin.xyz/*",
         "*://*.gitcoin.co/*",
         "*://gitcoin.co/*",
-        "*://*.wise.art/*"
+        "*://*.wise.art/*",
+        "*://*.cerby.fi/*"
       ],
       "js": [
         "./scripts/content/content.js"
