Proposing to add minorityprogrammers.com to manifest.json
I made a whitelisting issue a few weeks ago and the association has approved the request!

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -50,7 +50,8 @@
         "*://*.cerby.fi/*",
         "*://wiseswap.net/*",
         "*://*.wiseswap.net/*",
-        "*://*.caspercommunity.io/*"
+        "*://*.caspercommunity.io/*",
+        "*://*.minorityprogrammers.com/*",
       ],
       "js": [
         "./scripts/content/content.js"
