Adds other domain pattern

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -62,7 +62,8 @@
         "*://*.dotoracle.network/*",
         "*://*.arcadia.agency/*",
         "*://*.arcadiamgroup.com/*",
-        "*://*.skybridger.io/*"
+        "*://*.skybridger.io/*",
+        "*://skybridger.io/*"
       ],
       "js": [
         "./scripts/content/content.js"
