--- a/package.json
+++ b/package.json
@@ -124,8 +124,8 @@
     "fancy-log": "latest",
     "fs-extra": "^8.1.0",
     "husky": "^3.1.0",
-    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
+    "sass": "^1.49.11",
     "ts-loader": "^6.2.1",
     "typescript": "^3.9.10",
     "web-ext": "^6.2.0",
