--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.26.0",
     "browser-passworder": "^2.0.3",
     "casper-js-sdk": "^2.8.0",
+    "chokidar": "^3.5.3",
     "copy-to-clipboard": "^3.3.1",
     "download": "^8.0.0",
     "eslint-config-react-app": "^6.0.0",
@@ -35,13 +36,13 @@
     "material-ui-popup-state": "^2.0.0",
     "minimist": "^1.2.5",
     "mobx": "^6.5.0",
-    "mobx-react": "^6.1.1",
+    "mobx-react": "^7.3.0",
     "obj-multiplex": "^1.0.0",
     "owasp-password-strength-test": "^1.3.0",
-    "react": "^16.8.0",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-confirm": "^0.1.24",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.2",
     "react-idle-timer": "^4.6.4",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^5.0.0",
@@ -130,6 +131,6 @@
     "typescript": "^3.9.10",
     "web-ext": "^6.2.0",
     "webextension-polyfill-ts": "^0.12.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^4.9.2"
   }
 }
