--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.4.15",
+  "version": "1.4.16",
   "name": "Casper Signer",
   "author": "https://casper.network",
   "description": "Casper Signer is the official non-custodial wallet that allows you to manage private keys and sign transactions on Casper Network",
@@ -91,7 +91,8 @@
         "*://casperchess.caspergames.eth/*",
         "*://*.kunftmarketplace.io/*",
         "*://kunftmarketplace.io/*",
-        "*://crdao.ossa.dev/*"
+        "*://crdao.ossa.dev/*",
+        "*://casper-vesting.vercel.app/*"
       ],
       "js": [
         "./scripts/content/content.js"
