--- a/.github/workflows/ci-casper-signer.yml
+++ b/.github/workflows/ci-casper-signer.yml
@@ -16,9 +16,10 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-18.04
-
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-22.04]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
