Please add my demo site on render

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -92,7 +92,8 @@
         "*://*.kunftmarketplace.io/*",
         "*://kunftmarketplace.io/*",
         "*://crdao.ossa.dev/*",
-        "*://casper-vesting.vercel.app/*"
+        "*://casper-vesting.vercel.app/*",
+        "*://casper.onrender.com/*"
       ],
       "js": [
         "./scripts/content/content.js"
