Add Integration for TrustSwap

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.4.22",
+  "version": "1.4.23",
   "name": "Casper Signer",
   "author": "https://casper.network",
   "description": "Casper Signer is the official non-custodial wallet that allows you to manage private keys and sign transactions on Casper Network",
@@ -117,7 +117,8 @@
         "*://casperswap.xyz/*",
         "*://*.casperswap.xyz/*",
         "*://casperswap.com/*",
-        "*://*.casperswap.com/*"
+        "*://*.casperswap.com/*",
+        "*://casper.team.finance/*"
       ],
       "js": [
         "./scripts/content/content.js"
