Update Documentation Link

--- a/.github/ISSUE_TEMPLATE/whitelisting_request.yml
+++ b/.github/ISSUE_TEMPLATE/whitelisting_request.yml
@@ -11,7 +11,7 @@ body:
         Casper Signer will soon be replaced by Casper Wallet.
         If you are an existing Signer user looking to change/update, we recommend that you migrate to Casper Wallet when it is launched. 
         If you are building a new DApp or Application, we recommend that you directly integrate it with Casper Wallet.
-        For more details, please refer to the [Casper Wallet User Guide](https://www.casperwallet.io/user-guide).        
+        For more details, please refer to the [Casper Wallet Documenttion](https://casperwallet.io/develop).        
   - type: input
     id: project
     attributes:
